fix missing boost in available bonus